添加修改网站背景图片功能

--- a/poise/AD/AD/html/static/index.htm
+++ b/poise/AD/AD/html/static/index.htm
@@ -4,9 +4,9 @@
 <head>
     <title>Home</title>
     <meta charset="utf-8">
-    <meta name="keywords" content={KEYWORDS}>
-    <meta name="description" content={DESCRIPTION}>
-    {CSS}
+    <meta name="keywords" content=<%=KEYWORDS %> />
+    <meta name="description" content=<%=DESCRIPTION %> />
+    <%=CSS %>
 </head>
 <body>
 	<!--<div class="theme-changer-wrap">
@@ -188,6 +188,7 @@
                 <span>Latest From The Blog<img src="images/dot.gif" alt=""><a href="blog.html">All Posts</a></span>
             </div>
             <ul id="recent-posts" class="inner-960 clearfix">
+
                 <li class="col1-4 bottom-20">
                     <h4><a href="blog-single.html">Ut enim ad minima veniam</a></h4>
 
