--- a/poise/AD/AD/index.html
+++ b/poise/AD/AD/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 	Theme Name: Poise
 	Description: HTML/CSS Template
@@ -13,10 +13,10 @@
 
 -->
 
-<html lang="en">
+<html>
 <head>
     <title>Home</title>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
 
@@ -39,6 +39,7 @@
 
 <body>
 
+<!--
 	<div class="theme-changer-wrap">
 		<div class="theme-changer">
 			<div class="changer-inner">
@@ -70,7 +71,7 @@
 		</div>
 		<div class="open-close-demo"></div>
 	</div>
-
+-->
 <!-- HEADER -->
 
     <div class="dark-line"></div>
@@ -129,7 +130,12 @@
 <!-- SLIDER -->
 
             <div class="main-slider bottom-50">
-                <div id="slider" class="nivoSlider"><img src="images/content/slide1.jpg" alt="" title="#htmlcaption"> <img src="images/content/slide2.jpg" alt="" title="#htmlcaption1"> <img src="images/content/slide3.jpg" alt="" title="#htmlcaption2"></div>
+                <div id="slider" class="nivoSlider">
+                    <img src="images/content/slide1.jpg" alt="" title="#htmlcaption">
+                    <img src="images/content/slide2.jpg" alt="" title="#htmlcaption1">
+                    <img src="images/content/slide3.jpg" alt="" title="#htmlcaption2">
+                    <img src="images/content/img690x320-2.jpg" alt="" title="#htmlcaption3">
+                 </div>
 
                 <div id="htmlcaption" class="nivo-html-caption">
                     <span>At vero eos et accusamus et iusto odio dignissimos</span><a href="#"></a>
@@ -142,7 +148,10 @@
                 <div id="htmlcaption2" class="nivo-html-caption">
                     <span>Temporibus autem quibusdam et aut</span><a href="#"></a>
                 </div>
-
+                
+                <div id="htmlcaption3" class="nivo-html-caption">
+                    <span>第四次</span><a href="#"></a>
+                </div>
                 <div id="preloader"></div>
             </div>
             
