--- a/poise/AD/AD/html/javascript/javascript.htm
+++ b/poise/AD/AD/html/javascript/javascript.htm
@@ -1,6 +1,4 @@
-﻿<script type="text/javascript" src="js/jquery-1.7.1.min.js">
-</script>
-<script type="text/javascript" src="js/jquery-ui-1.8.18.custom.min.js">
+﻿<script type="text/javascript" src="js/jquery-ui-1.8.18.custom.min.js">
 </script>
 <script type="text/javascript" src="js/jquery.effects.core.min.js">
 </script>
